test/corpus/statements.txt
==================
if statement
==================

{% if active %}hello{% endif %}

---

(source_file
  (statement
    (if_statement
      condition: (identifier)
      (text)))
  (text))

==================
if else statement
==================

{% if x %}a{% else %}b{% endif %}

---

(source_file
  (statement
    (if_statement
      condition: (identifier)
      (text)
      (else_clause)
      (text)))
  (text))

==================
if elif else statement
==================

{% if x %}a{% elif y %}b{% else %}c{% endif %}

---

(source_file
  (statement
    (if_statement
      condition: (identifier)
      (text)
      (elseif_clause
        condition: (identifier))
      (text)
      (else_clause)
      (text)))
  (text))

==================
for statement
==================

{% for item in items %}{{ item }}{% endfor %}

---

(source_file
  (statement
    (for_statement
      variable: (identifier)
      iterable: (identifier)
      (output
        (identifier))))
  (text))

==================
for with tuple unpacking
==================

{% for key, value in items %}{{ key }}{% endfor %}

---

(source_file
  (statement
    (for_statement
      variable: (identifier_list
        (identifier)
        (identifier))
      iterable: (identifier)
      (output
        (identifier))))
  (text))

==================
for with condition
==================

{% for item in items if item.active %}{{ item }}{% endfor %}

---

(source_file
  (statement
    (for_statement
      variable: (identifier)
      iterable: (identifier)
      (for_condition
        (member_expression
          object: (identifier)
          property: (identifier)))
      (output
        (identifier))))
  (text))

==================
for with recursive
==================

{% for item in items recursive %}{{ item }}{% endfor %}

---

(source_file
  (statement
    (for_statement
      variable: (identifier)
      iterable: (identifier)
      (output
        (identifier))))
  (text))

==================
for else
==================

{% for item in items %}{{ item }}{% else %}none{% endfor %}

---

(source_file
  (statement
    (for_statement
      variable: (identifier)
      iterable: (identifier)
      (output
        (identifier))
      (else_clause)
      (text)))
  (text))

==================
block statement
==================

{% block content %}hello{% endblock %}

---

(source_file
  (statement
    (block_statement
      name: (identifier)
      (text)))
  (text))

==================
block with end name
==================

{% block content %}hello{% endblock content %}

---

(source_file
  (statement
    (block_statement
      name: (identifier)
      (text)
      end_name: (identifier)))
  (text))

==================
block scoped
==================

{% block sidebar scoped %}hello{% endblock %}

---

(source_file
  (statement
    (block_statement
      name: (identifier)
      (text)))
  (text))

==================
set statement inline
==================

{% set x = 42 %}

---

(source_file
  (statement
    (set_statement
      variable: (identifier)
      value: (integer)))
  (text))

==================
set statement with tuple
==================

{% set x, y = items %}

---

(source_file
  (statement
    (set_statement
      variable: (identifier_list
        (identifier)
        (identifier))
      value: (identifier)))
  (text))

==================
set statement block form
==================

{% set content %}hello{% endset %}

---

(source_file
  (statement
    (set_statement
      variable: (identifier)
      (text)))
  (text))

==================
extends statement
==================

{% extends "base.html" %}

---

(source_file
  (statement
    (extends_statement
      (string)))
  (text))

==================
include statement
==================

{% include "header.html" %}

---

(source_file
  (statement
    (include_statement
      (string)))
  (text))

==================
include with context
==================

{% include "header.html" with context %}

---

(source_file
  (statement
    (include_statement
      (string)))
  (text))

==================
include without context
==================

{% include "header.html" without context %}

---

(source_file
  (statement
    (include_statement
      (string)))
  (text))

==================
include ignore missing
==================

{% include "header.html" ignore missing %}

---

(source_file
  (statement
    (include_statement
      (string)))
  (text))

==================
import statement
==================

{% import "macros.html" as macros %}

---

(source_file
  (statement
    (import_statement
      (string)
      alias: (identifier)))
  (text))

==================
from import statement
==================

{% from "macros.html" import button, input %}

---

(source_file
  (statement
    (from_statement
      (string)
      (import_list
        (import_name
          (identifier))
        (import_name
          (identifier)))))
  (text))

==================
from import with alias
==================

{% from "macros.html" import button as btn %}

---

(source_file
  (statement
    (from_statement
      (string)
      (import_list
        (import_name
          (identifier)
          alias: (identifier)))))
  (text))

==================
do statement
==================

{% do items.append(42) %}

---

(source_file
  (statement
    (do_statement
      (call_expression
        function: (member_expression
          object: (identifier)
          property: (identifier))
        (argument_list
          (integer)))))
  (text))

==================
macro statement
==================

{% macro button(label) %}<button>{{ label }}</button>{% endmacro %}

---

(source_file
  (statement
    (macro_statement
      name: (identifier)
      (argument_list
        (identifier))
      (text)
      (output
        (identifier))
      (text)))
  (text))

==================
with statement
==================

{% with x = 1, y = 2 %}{{ x }}{% endwith %}

---

(source_file
  (statement
    (with_statement
      (assignment_list
        (assignment
          (identifier)
          (integer))
        (assignment
          (identifier)
          (integer)))
      (output
        (identifier))))
  (text))

==================
autoescape statement
==================

{% autoescape true %}{{ content }}{% endautoescape %}

---

(source_file
  (statement
    (autoescape_statement
      (boolean)
      (output
        (identifier))))
  (text))

==================
filter statement
==================

{% filter upper %}hello{% endfilter %}

---

(source_file
  (statement
    (filter_statement
      name: (identifier)
      (text)))
  (text))

==================
call statement
==================

{% call(item) render_list(items) %}{{ item }}{% endcall %}

---

(source_file
  (statement
    (call_statement
      (argument_list
        (identifier))
      (call_expression
        function: (identifier)
        (argument_list
          (identifier)))
      (output
        (identifier))))
  (text))

==================
generic tag
==================

{% spaceless %}hello{% endspaceless %}

---

(source_file
  (statement
    (generic_tag
      name: (identifier)))
  (text)
  (statement
    (generic_tag
      name: (identifier)))
  (text))
